--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,269 @@
+.shahbaz {
+  width: 100%;
+  height: 400px;
+  background-color: #ffdd78;
+  display: flex;
+}
+.shahbaz .left {
+  width: 48%;
+}
+.shahbaz .left p {
+  margin-top: 79px;
+  padding-left: 135px;
+  margin-bottom: 0%;
+  font-family: DM Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 4.8px;
+  text-transform: uppercase;
+}
+.shahbaz .left h3 {
+  padding-left: 135px;
+  margin-top: 21px;
+  font-family: DM Serif Display;
+  font-size: 56px;
+  font-style: normal;
+  font-weight: 400px;
+  line-height: 64px;
+}
+.shahbaz .right {
+  width: 48%;
+  margin-top: 160px;
+}
+.shahbaz .right #search {
+  width: 60%;
+  height: 48px;
+  border-radius: 5px;
+  border: 1px solid #dadada;
+  background: #fff;
+}
+.shahbaz .right button {
+  width: 25%;
+  height: 48px;
+  border-radius: 5px;
+  background-color: #434ccc;
+  color: white;
+  border: none;
+  margin-left: 30px;
+}
+
+@media all and (max-width: 700px) {
+  .shahbaz {
+    width: 100%;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+  }
+  .shahbaz .left {
+    margin-left: 10px;
+    margin-top: 0%;
+  }
+  .shahbaz .left p {
+    padding-left: 0%;
+    margin-top: 60px;
+    font-weight: 400px;
+  }
+  .shahbaz .left h3 {
+    width: 209px;
+    height: 144px;
+    padding-left: 0px;
+    line-height: 48px;
+    font-size: 40px;
+    margin-bottom: 0px;
+  }
+  .shahbaz .right {
+    margin-top: 20px;
+    width: 90%;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .shahbaz .right #search {
+    width: 100%;
+    height: 60px;
+  }
+  .shahbaz .right button {
+    margin-top: 20px;
+    width: 30%;
+    height: 48px;
+    margin-left: 0px;
+  }
+}
+.footer2nd {
+  width: 100%;
+  height: 500px;
+  padding: 0%;
+  margin: 0%;
+  background: rgb(245, 246, 252);
+  margin: auto;
+  box-sizing: border-box;
+}
+
+.footer2ndpart {
+  width: 80%;
+  display: grid;
+  padding-top: 5%;
+  padding-bottom: 4%;
+  grid-template-areas: "fir sec thir fou" "fir sec thir fou";
+  justify-content: space-around;
+  margin: auto;
+  gap: 12%;
+}
+.footer2ndpart .footer2ndpart div:nth-child(1) {
+  grid-area: fir;
+}
+.footer2ndpart .footer2ndpart div:nth-child(2) {
+  grid-area: sec;
+}
+.footer2ndpart .footer2ndpart div:nth-child(3) {
+  grid-area: thir;
+}
+.footer2ndpart .footer2ndpart div:nth-child(4) {
+  grid-area: fou;
+}
+.footer2ndpart .social-media > img {
+  margin-right: 10px;
+}
+
+.conform {
+  display: flex;
+  gap: 8%;
+  align-items: center;
+}
+.conform img {
+  border-radius: 10px;
+  margin-top: -30px;
+}
+.conform p {
+  color: rgb(168, 169, 173);
+  font-family: DM Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+.conform #data1 {
+  color: #000;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+}
+.conform #data2 {
+  color: #000;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+}
+
+h4 {
+  color: rgb(15, 15, 15);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400px;
+  line-height: 32px;
+}
+
+.footer2ndpart > div > p {
+  color: rgb(168, 169, 173);
+  font-family: DM Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.footer2ndpart > div > h5 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400px;
+  line-height: 24px;
+}
+
+@media all and (max-width: 769px) {
+  .footer2nd {
+    width: 100%;
+    height: 820px;
+    padding: 0%;
+    margin: 0%;
+    background: rgb(245, 246, 252);
+    margin: auto;
+  }
+  .footer2ndpart {
+    width: 80%;
+    display: grid;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    grid-template-areas: "fir fir" "sec thir" "fou  fou";
+    margin: auto;
+    gap: 1%;
+  }
+  .footer2ndpart div:nth-child(1) {
+    grid-area: fir;
+  }
+  .footer2ndpart div:nth-child(2) {
+    grid-area: sec;
+  }
+  .footer2ndpart div:nth-child(3) {
+    grid-area: thir;
+  }
+  .footer2ndpart div:nth-child(4) {
+    grid-area: fou;
+  }
+  .social-media > img {
+    margin-right: 10px;
+  }
+}
+.lastpart {
+  width: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  background: rgb(245, 246, 252);
+  box-sizing: border-box;
+}
+.lastpart p {
+  color: rgb(168, 169, 173);
+  font-family: DM Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+.lastpart #para1 {
+  margin-left: 10%;
+}
+.lastpart #para2 {
+  margin-right: 10%;
+}
+
+@media all and (max-width: 769px) {
+  .lastpart {
+    width: 100%;
+    display: block;
+  }
+  .lastpart p {
+    color: rgb(168, 169, 173);
+    font-family: DM Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
+  .lastpart #para2 {
+    margin-left: 10%;
+  }
+}
+body {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -147,16 +413,51 @@ header .ho {
     font-size: 56px;
   }
 }
+@media all and (max-width: 500px) {
+  .main {
+    padding-top: 16px !important;
+  }
+  .main .map {
+    width: 80%;
+    height: 200px !important;
+    margin-bottom: 44 !important;
+  }
+  .main .msin {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
+  .main .msin .msg {
+    width: 100% !important;
+  }
+  .main .msin .msg h2 {
+    font-size: 40px !important;
+    margin: 0px 0px 28px !important;
+  }
+  .main .msin .msg .naem {
+    flex-direction: column;
+    gap: 10px !important;
+  }
+  .main .msin .msg .naem #name,
+  .main .msin .msg .naem #email {
+    width: 100% !important;
+  }
+  .main .msin .msg #text {
+    width: 100% !important;
+    height: 150px !important;
+  }
+}
 .main {
   height: 1248px;
   width: 100%;
   background-color: #f5f6fc;
+  padding-top: 64px;
 }
 .main .map {
   width: 80%;
   height: 640px;
   margin: auto;
-  margin-top: 64px;
   margin-bottom: 60px;
 }
 .main .map iframe {
@@ -188,6 +489,7 @@ header .ho {
 }
 .main .msin .msg .naem #email {
   width: 47%;
+  height: 28px;
 }
 .main .msin .msg #text {
   margin-top: 28px;
@@ -201,6 +503,7 @@ header .ho {
   background-color: #434ccc;
   border: none;
   color: var(--Text_White, #fff);
+  border-radius: 5px;
 }
 .main .msin .info h2 {
   font-size: 56px;
