--- a/styles.scss
+++ b/styles.scss
@@ -1,10 +1,16 @@
+@import "mid.scss";
+@import "footer2nd.scss";
+@import "lastpart.scss";
+
+body {
+  box-sizing: border-box;
+}
 $p-color: var(--Text_White, #fff);
 body {
   margin: 0;
   padding: 0;
 }
 header {
-  // position: relative;
   .d1 {
     display: flex;
     background-color: #434ccc;
@@ -15,7 +21,7 @@ header {
     box-sizing: border-box;
     align-items: center;
     flex-wrap: wrap;
-     position: relative;
+    position: relative;
     .logo {
       height: 48px;
       width: 102px;
@@ -24,10 +30,8 @@ header {
       font-size: 40px;
       font-style: normal;
       font-weight: 400;
-      // line-height: 48px;
     }
     .d12 {
-      // color: $p-color;
       display: flex;
       justify-content: space-between;
       text-align: right;
@@ -35,11 +39,8 @@ header {
       font-size: 16px;
       font-style: normal;
       font-weight: 700;
-      // line-height: 24px;
       height: 24px;
       width: 324px;
-      // background-color: aquamarine;
-      // position: relative;
       margin-left: 38%;
       a {
         text-decoration: none;
@@ -52,28 +53,24 @@ header {
       border-radius: 5px;
       width: 170px;
       height: 48px;
-      // flex-shrink: 1;
       color: $p-color;
       text-align: center;
       font-family: DM Sans;
       font-size: 16px;
       font-style: normal;
       font-weight: 700;
-      // line-height: 24px;
     }
-    button:hover{
+    button:hover {
       cursor: pointer;
       background-color: #434aa0;
     }
   }
   .d2 {
-    // align-items: center;
     background-color: #434ccc;
     width: 100%;
     height: 224px;
     display: flex;
     flex-direction: column;
-    // justify-content: center;
     box-sizing: border-box;
     align-items: center;
     padding-top: 47px;
@@ -85,171 +82,198 @@ header {
       color: $p-color;
       width: 280px;
       height: 80px;
-      // text-align: center;
       font-size: 72px;
       font-style: normal;
       font-weight: 400;
-      // line-height: 80px;
       margin-bottom: 10px;
     }
     p:nth-child(2) {
       color: $p-color;
       height: 32px;
       width: 332px;
-      // text-align: center;
       font-size: 20px;
       font-style: normal;
       font-weight: 400;
-      // line-height: 32px;
     }
   }
-  .log{
+  .log {
     display: none;
   }
-  .ho{
+  .ho {
     display: none;
   }
 }
-@media all and (max-width: 860px){
-  header{
-  .d1{
-    position: relative;
-    height: 64px;
-    // padding-top: 80px;
-    .logo{
-      height: 32px;
-      width: 70px;
-      font-size: 24px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      // color: #434aa0;
-    }
-    button{
-      display: none;
-    }
-    .log{
-      display: block;
-      position: absolute;
-      right: 5%;
-      top: 20px;
-      color: $p-color;
-     }
-     .ho{
-      height: 200px;
-      width: 30%;
-      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-      position: absolute;
-      left:70%;
-      top: 40px;
-      padding: 20px;
-      color: brown;
-      font-size: larger;
-      display: none;
-      background-color: $p-color;
-      }
-      .log:hover~.ho{
-          display: block;
-      }
-  }
-  .d12{
-    a{
-    display: none;
-    }
-  }
-  .d2{
-    height: 176px;
-    padding-top: 28px;
-    p:nth-child(1){
-      width: 218px;
+@media all and (max-width: 860px) {
+  header {
+    .d1 {
+      position: relative;
       height: 64px;
-      font-size: 56px;
-      // margin-bottom: 13px;
+      .logo {
+        height: 32px;
+        width: 70px;
+        font-size: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      button {
+        display: none;
+      }
+      .log {
+        display: block;
+        position: absolute;
+        right: 5%;
+        top: 20px;
+        color: $p-color;
+      }
+      .ho {
+        height: 200px;
+        width: 30%;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        position: absolute;
+        left: 70%;
+        top: 40px;
+        padding: 20px;
+        color: brown;
+        font-size: larger;
+        display: none;
+        background-color: $p-color;
+      }
+      .log:hover ~ .ho {
+        display: block;
+      }
+    }
+    .d12 {
+      a {
+        display: none;
+      }
+    }
+    .d2 {
+      height: 176px;
+      padding-top: 28px;
+      p:nth-child(1) {
+        width: 218px;
+        height: 64px;
+        font-size: 56px;
+      }
     }
   }
+}
+@media all and (max-width: 500px) {
+  .main {
+    padding-top: 16px !important;
+    .map {
+      width: 80%;
+      height: 200px !important;
+      margin-bottom: 44 !important;
+    }
+    .msin {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+      .msg {
+        width: 100% !important;
+        h2 {
+          font-size: 40px !important;
+          margin: 0px 0px 28px !important;
+        }
+        .naem {
+          flex-direction: column;
+          gap: 10px !important;
+          #name,
+          #email {
+            width: 100% !important;
+          }
+        }
+        #text {
+          width: 100% !important;
+          height: 150px !important;
+        }
+      }
+    }
   }
 }
-.main{
+.main {
   height: 1248px;
   width: 100%;
   background-color: #f5f6fc;
-  .map{
+  padding-top: 64px;
+  .map {
     width: 80%;
     height: 640px;
-    // background-color:red;
     margin: auto;
-    margin-top: 64px;
     margin-bottom: 60px;
-    iframe{
+    iframe {
       height: 100%;
       width: 100%;
     }
   }
-  .msin{
+  .msin {
     width: 80%;
     display: flex;
     margin: auto;
     box-sizing: border-box;
     gap: 5%;
-    .msg{
+    .msg {
       width: 70%;
-      // background-color: blue;
-      // height: 64px;
-      h2{font-size: 56px;
-      font-weight: 400;
-      margin: 0px 0px 36px;
+      h2 {
+        font-size: 56px;
+        font-weight: 400;
+        margin: 0px 0px 36px;
       }
-      .naem{
+      .naem {
         display: flex;
         gap: 5%;
-      #name{
-        width:47%;
-        height: 28px;
+        #name {
+          width: 47%;
+          height: 28px;
+        }
+        #email {
+          width: 47%;
+          height: 28px;
+        }
       }
-      #email{
-        width: 47%;
-      }
-      }
-      #text{
+      #text {
         margin-top: 28px;
         width: 98%;
         height: 144px;
         margin-bottom: 32px;
       }
-      #sub{
+      #sub {
         width: 170px;
         height: 48px;
         background-color: #434ccc;
         border: none;
         color: $p-color;
+        border-radius: 5px;
       }
     }
-    .info{
-      h2{
-      font-size: 56px;
-      font-weight: 400;
-      margin-bottom: 36px;
-      margin: 0px 0px 36px;
+    .info {
+      h2 {
+        font-size: 56px;
+        font-weight: 400;
+        margin-bottom: 36px;
+        margin: 0px 0px 36px;
       }
-      .s1{
+      .s1 {
         display: flex;
-        // background-color: #434ccc;
         height: 50px;
         gap: 5%;
         margin-bottom: 30px;
-        svg{
-         path{
-          height: 48px;
-         }
+        svg {
+          path {
+            height: 48px;
+          }
         }
-        p{
+        p {
           text-align: start;
         }
       }
-      .sym{
+      .sym {
         display: flex;
         gap: 5%;
-        button{
+        button {
           background-color: #434ccc;
           border: none;
           height: 48px;
@@ -258,6 +282,5 @@ header {
         }
       }
     }
-    
   }
 }
